--- a/Frontend/Web/src/General-Components/Navbar/Navbar.css
+++ b/Frontend/Web/src/General-Components/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-/* General Reset */
 * {
   margin: 0;
   padding: 0;
@@ -26,11 +25,6 @@ a {
 }
 
 
-.navbar-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
 .logo {
   display: flex;
@@ -358,13 +352,18 @@ a {
 .containerNav {
   width: 90%;
   margin: 0 auto;
-  padding: 0 20px;
+  /* background-color: red; */
+  display: flex;
+  justify-content: space-between;
 }
 
 .navbar-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: green;
+  width: 100%;
+
 }
 
 .logo {
@@ -460,6 +459,7 @@ a {
   cursor: pointer;
   padding: 10px;
   z-index: 101;
+
 }
 
 .mobile-menu-btn .menu-bar {
@@ -582,20 +582,6 @@ a {
 }
 
 
-
-.containerNav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  /* padding: 10px 20px; */
-}
-
-.navbar-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
 
 .logo {
   display: flex;
