--- a/Frontend/Web/src/General-Components/Community/Community.module.css
+++ b/Frontend/Web/src/General-Components/Community/Community.module.css
@@ -138,6 +138,7 @@ textarea {
   margin-bottom: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
 }
 
 .postCard h3 {
@@ -148,7 +149,6 @@ textarea {
 }
 
 .postCard p {
-  font-size: 1rem;
   color: #555;
   margin: 5px 0;
 }
@@ -241,7 +241,7 @@ textarea {
   padding: 20px;
   margin-bottom: 20px;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   gap: 15px;
 }
 
@@ -252,16 +252,17 @@ textarea {
 }
 
 .posterImage {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   object-fit: cover;
 }
 
 .posterName {
   font-weight: 600;
-  font-size: 1.1rem;
+  /* font-size: 1.1rem; */
   color: #333;
+  font-size: 25px;
 }
 
 .posterCareer {
@@ -678,6 +679,7 @@ textarea {
   gap: 15px;
   height: 100%;
   justify-content: space-between; /* Ensures even distribution of space */
+  
 }
 
 .postTitle {
@@ -692,6 +694,16 @@ textarea {
   color: #555;
   line-height: 1.5;
   margin-bottom: 15px;
+  font-weight: 500;
+  padding: 15px;
+  background-color: #f4f4f4; /* Light gray background for the box */
+  border: 1px solid #ddd; /* Light border to define the box */
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+}
+.jobDesc{
+  color:rgb(245, 33, 33);
+  font-weight: 800;
 }
 
 .postDetails {
@@ -700,6 +712,9 @@ textarea {
   padding-top: 10px;
   border-top: 1px solid #eee;
   margin-bottom: 10px;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .actions {
