--- a/Frontend/Web/src/Admin/Certificates/Certificates.module.css
+++ b/Frontend/Web/src/Admin/Certificates/Certificates.module.css
@@ -184,3 +184,61 @@
     vertical-align: middle;
   }
   
+  .uploadedFile {
+    margin-top: 10px;
+    text-align: center;
+  }
+  
+  .uploadedImage {
+    max-width: 100px;
+    max-height: 100px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+  
+
+  .previewModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+  }
+  
+  .previewContent {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 900px;
+    position: relative;
+  }
+  
+  .closePreviewBtn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  
+  .previewImage {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .previewBtn {
+    background-color: rgb(109, 201, 126);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  
