--- a/Frontend/Web/src/General-Components/Settings/Settings.css
+++ b/Frontend/Web/src/General-Components/Settings/Settings.css
@@ -16,7 +16,7 @@
   border-radius: 8px;
   /* margin: 20px; */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: green;
+  /* background-color: green; */
   /* width: 100%; */
 }
 
@@ -24,6 +24,7 @@
   color: #2c3e50; 
   font-size: 32px;
   margin-bottom: 20px;
+
 }
 
 .settings-content p {
