--- a/Frontend/Web/src/Admin/Certificates/Certificates.module.css
+++ b/Frontend/Web/src/Admin/Certificates/Certificates.module.css
@@ -41,7 +41,7 @@
 }
 
 .userCard:hover {
-  transform: translateY(-8px);
+  /* transform: translateY(-8px); */
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
 }
 
@@ -60,6 +60,8 @@
 .certificateStatus {
   font-size: 1.1rem;
   margin-bottom: 20px;
+  display: flex;
+  gap: 5px;
 }
 
 .statusTextPending {
@@ -76,6 +78,7 @@
 
 .uploadedFile {
   margin-top: 20px;
+
 }
 
 .previewBtn {
@@ -91,6 +94,7 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+  width: 100%;
 }
 
 .previewBtn:hover {
@@ -114,6 +118,59 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+  width: 50%;
+}
+.rejectBtnR{
+  padding: 10px 15px;
+  font-size: 1.2rem;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  background-color: #e74c3c;
+  color: #fff;
+
+}
+
+.approveBtnA{
+
+  padding: 10px 15px;
+  font-size: 1.2rem;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  background-color: #2ecc71;
+  color: #fff;
+
+
+}
+
+.rejectedDiv{
+  padding: 10px 15px;
+  font-size: 1.2rem;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  background-color: #e74c3c;
+  color: #fff;
+
 }
 
 .approveBtn {
@@ -144,6 +201,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 .previewContent {
@@ -153,6 +211,8 @@
   position: relative;
   width: 90%;
   max-width: 800px;
+  display: flex;
+  flex-direction: column;
 }
 
 .closePreviewBtn {
@@ -161,9 +221,10 @@
   padding: 10px;
   border-radius: 6px;
   font-size: 1.1rem;
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  margin-bottom: 10px;
+  width: fit-content;
+  align-self: flex-end;
+
   border: none;
   cursor: pointer;
 }
